# Game001_STG_SuperStart

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
Env/: vs2022.vsconfig
Game/: CMakeLists.txt
Game/Code/: Main.cpp
Game/TestCode/Asset/: TestAsset.hpp
HobbyEngine/: Config.cmake
HobbyEngine/Inc/Engine/: ApplicationFramework.h  Engine.h
HobbyEngine/Script/Generater/CreateModule/Template/: CMakeLists.txt  Config.cmake
HobbyEngine/Script/Generater/CreateModule/Template/Test/: CMakeLists.txt  Config.cmake
HobbyEngine/Script/Generater/CreateModule/Template/Test/Template/: Test.cpp
HobbyEngine/Src/: ApplicationFramework.cpp  Engine.cpp
HobbyEngine/Src/Time/: FPS.cpp
HobbyEngine/cmake/: VCPkg.cmake
HobbyPlugin/AssetManager/: .editorconfig  CMakeLists.txt
HobbyPlugin/AssetManager/Src/: AssetDataBinary.cpp  AssetDataJson.cpp  AssetDataText.cpp  AssetDataToml.cpp  AssetDataXml.cpp  AssetManagerModule.cpp
HobbyPlugin/AssetManager/Test/: CMakeLists.txt
HobbyPlugin/EnhancedInput/: CMakeLists.txt
HobbyPlugin/EnhancedInput/Inc/: EnhancedInputModule.h
HobbyPlugin/EnhancedInput/Src/: EnhancedInputModule.cpp
HobbyPlugin/GameDevGUI/GameDevGUITest/: GameDevGUIModuleTest.hpp
HobbyPlugin/Localization/: .gitignore
HobbyPlugin/Localization/Test/: CMakeLists.txt
HobbyPlugin/Lua/: ThirdPartyNotices.txt
HobbyPlugin/Platform/: CMakeLists.txt  Config.cmake  README.md
HobbyPlugin/Platform/Inc/: PlatformModule.h
HobbyPlugin/Platform/Src/: PlatformModule.cpp
HobbyPlugin/RHI/: .gitattributes  CMakeLists.txt  Config.cmake  README.md
(+52 files in other folders)
